syntax = "proto3";

package pb;

option go_package = "../pb";

message Receipt {
    enum Status {
        SUCCESS = 0;
        FAILED = 1;
    }
    bytes tx_hash = 1;
    bytes ret = 2;
    Status status = 3;
    uint64 gas_used = 4;
    repeated EvmLog evm_logs = 5;
    bytes bloom = 6;
    bytes contract_address = 7;
    uint64 cumulative_gas_used = 8;
    bytes effective_gas_price = 9;
}

message Receipts {
    repeated Receipt receipts = 1;
}

message EvmLog {
    bytes address = 1;
    repeated bytes topics = 2;
    bytes data = 3;
    uint64 block_number = 4;
    bytes transaction_hash = 5;
    uint64 transaction_index = 6;
    bytes block_hash = 7;
    uint64 log_index = 8;
    bool removed = 9;
}
